--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "roots/wp-password-bcrypt": "1.1.0",
     "wpackagist-theme/twentytwentythree": "^1.0",
     "wpackagist-plugin/generateblocks": "^1.7",
-    "wpackagist-plugin/duplicate-page": "^4.5"
+    "wpackagist-plugin/duplicate-page": "^4.5",
+    "wpackagist-plugin/carousel-block": "^1.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
