--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "wpackagist-theme/twentytwentythree": "^1.0",
     "wpackagist-plugin/generateblocks": "^1.7",
     "wpackagist-plugin/duplicate-page": "^4.5",
-    "wpackagist-plugin/carousel-block": "^1.0"
+    "wpackagist-plugin/carousel-block": "^1.0",
+    "wpackagist-plugin/icon-block": "^1.5"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.7.1",
