--- a/web/app/themes/retis/src/package.json
+++ b/web/app/themes/retis/src/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@splidejs/splide": "^4.1.4",
-    "alpinejs": "^3.12.0"
+    "alpinejs": "^3.12.0",
+    "rellax": "^1.12.1"
   }
 }
