--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
         "wpackagist-plugin/generateblocks": "^1.7",
         "wpackagist-plugin/duplicate-page": "^4.5",
         "wpackagist-plugin/carousel-block": "^1.0",
-        "wpackagist-plugin/icon-block": "^1.5"
+        "wpackagist-plugin/icon-block": "^1.5",
+        "rcotillo/admin-columns-pro": "^6.1"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7.1",
