--- a/web/app/themes/retis/src/package.json
+++ b/web/app/themes/retis/src/package.json
@@ -17,8 +17,6 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
-    "@splidejs/splide": "^4.1.4",
-    "alpinejs": "^3.12.0",
-    "rellax": "^1.12.1"
+    "alpinejs": "^3.12.0"
   }
 }
