--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
         "wpackagist-plugin/duplicate-page": "^4.5",
         "wpackagist-plugin/carousel-block": "^1.0",
         "wpackagist-plugin/icon-block": "^1.5",
-        "rcotillo/admin-columns-pro": "^6.1"
+        "rcotillo/admin-columns-pro": "^6.1",
+        "wpackagist-plugin/modal-block": "*"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7.1",
