--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
         "wpackagist-plugin/carousel-block": "^1.0",
         "wpackagist-plugin/icon-block": "^1.5",
         "rcotillo/admin-columns-pro": "^6.1",
-        "wpackagist-plugin/modal-block": "*"
+        "wpackagist-plugin/modal-block": "^2.1"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7.1",
