--- a/web/app/themes/retis/src/package.json
+++ b/web/app/themes/retis/src/package.json
@@ -17,6 +17,7 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
-    "alpinejs": "^3.12.0"
+    "alpinejs": "^3.12.0",
+    "rellax": "^1.12.1"
   }
 }
